--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-421.4KB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30120, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-10.24MB/s(Youtube:不良林), server: 116.129.253.177, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.98MB/s(Youtube:不良林), server: 116.129.253.177, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.80MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-1.47MB/s(Youtube:不良林), server: 60.249.3.231, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.64MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.66MB/s(Youtube:不良林), server: 159.27.90.254, port: 63078, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 159.27.90.254}}
+  - {name: 🇨🇳 中国-277.3KB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.48MB/s(Youtube:不良林), server: 161.8.184.62, port: 29622, type: ss, cipher: aes-256-gcm, password: !<str> 89930128}
-  - {name: 🇨🇳 中国-10.82MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30170, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.25MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-230.6KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇨🇳 中国-8.06MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-1.47MB/s(Youtube:不良林), server: 60.249.3.231, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-335.4KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇫🇷 法国-1.05MB/s(Youtube:不良林), server: 149.202.82.172, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇫🇷 法国-1.54MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林), server: 165.154.243.208, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-477.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 43960, type: vmess, uuid: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /j20-sp1, ws-headers: {Host: pp1.zhengzhongfeizhu.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-421.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-277.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.82MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.25MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-230.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.06MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.47MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-335.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.54MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-477.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-421.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-277.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.82MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.25MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-230.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.06MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.47MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-335.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.54MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-477.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-421.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-277.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.82MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.25MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-230.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.06MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.47MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-335.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.54MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-477.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-421.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-277.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.82MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.25MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-230.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.06MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.47MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-335.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.54MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-477.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-421.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-277.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.82MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.25MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-230.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.06MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.47MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-335.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.54MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-477.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-421.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-277.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.82MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.25MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-230.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.06MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.47MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-335.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.54MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-477.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-421.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-277.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.82MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.25MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-230.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.06MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.47MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-335.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.54MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-477.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
